; ModuleID = '/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-search.c_compile_condition_twowords.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-search.c_compile_condition_twowords.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.condition_with_hash = type { i8*, i8*, i8*, i8*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i8*, i8*, i8*, i32)* @compile_condition_twowords to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @compile_condition_twowords(i8* %0, i8* %1, i8* %2, i8* %3, i32 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca %struct.condition_with_hash*, align 8
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  store i32 %4, i32* %10, align 4
  %12 = call %struct.condition_with_hash* @zmalloc(i32 40)
  store %struct.condition_with_hash* %12, %struct.condition_with_hash** %11, align 8
  %13 = load i32, i32* %10, align 4
  %14 = load %struct.condition_with_hash*, %struct.condition_with_hash** %11, align 8
  %15 = getelementptr inbounds %struct.condition_with_hash, %struct.condition_with_hash* %14, i32 0, i32 4
  store i32 %13, i32* %15, align 8
  %16 = load i8*, i8** %8, align 8
  %17 = load %struct.condition_with_hash*, %struct.condition_with_hash** %11, align 8
  %18 = getelementptr inbounds %struct.condition_with_hash, %struct.condition_with_hash* %17, i32 0, i32 3
  store i8* %16, i8** %18, align 8
  %19 = load i8*, i8** %9, align 8
  %20 = load %struct.condition_with_hash*, %struct.condition_with_hash** %11, align 8
  %21 = getelementptr inbounds %struct.condition_with_hash, %struct.condition_with_hash* %20, i32 0, i32 2
  store i8* %19, i8** %21, align 8
  %22 = load i8*, i8** %6, align 8
  %23 = load %struct.condition_with_hash*, %struct.condition_with_hash** %11, align 8
  %24 = getelementptr inbounds %struct.condition_with_hash, %struct.condition_with_hash* %23, i32 0, i32 1
  store i8* %22, i8** %24, align 8
  %25 = load i8*, i8** %7, align 8
  %26 = load %struct.condition_with_hash*, %struct.condition_with_hash** %11, align 8
  %27 = getelementptr inbounds %struct.condition_with_hash, %struct.condition_with_hash* %26, i32 0, i32 0
  store i8* %25, i8** %27, align 8
  %28 = load %struct.condition_with_hash*, %struct.condition_with_hash** %11, align 8
  %29 = bitcast %struct.condition_with_hash* %28 to i8*
  ret i8* %29
}

declare dso_local %struct.condition_with_hash* @zmalloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
